Use `css` instead of `cssbeautify` and upgrade autoprefixer
CSSBeautify is broken.

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "sublime-autoprefixer",
   "dependencies": {
-    "cssbeautify": "~0.3.0",
-    "autoprefixer": "~0.7.20130808",
-    "detect-indent": "~0.1.0"
+    "autoprefixer": "~0.8.0",
+    "detect-indent": "~0.1.0",
+    "css": "~1.4.1"
   },
   "engines": {
     "node": ">=0.8.0"
