--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "sublime-autoprefixer",
   "dependencies": {
-    "autoprefixer": "~1.0.0"
+    "autoprefixer": "^1.1.0"
   },
   "engines": {
-    "node": ">=0.8.0"
+    "node": ">=0.10.0"
   },
   "private": true
 }
