refactor the JS part

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "sublime-autoprefixer",
   "dependencies": {
-    "autoprefixer": "^2.0.0"
+    "autoprefixer": "^2.0.0",
+    "get-stdin": "^0.1.0"
   },
   "engines": {
     "node": ">=0.10.0"
