--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
+  "private": true,
+  "scripts": {
+    "test": "xo"
+  },
   "dependencies": {
     "autoprefixer": "^6.0.0",
     "get-stdin": "^5.0.1",
     "postcss": "^5.0.4",
     "postcss-safe-parser": "^1.0.1"
   },
-  "private": true
+  "devDependencies": {
+    "xo": "*"
+  }
 }
