Adds scss parser. Checkes syntax to determine parser.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "autoprefixer": "^6.0.0",
     "get-stdin": "^5.0.1",
     "postcss": "^5.0.4",
-    "postcss-safe-parser": "^1.0.1"
+    "postcss-safe-parser": "^1.0.1",
+    "postcss-scss": "^0.1.8"
   }
 }
